--- a/serverweb/src/main/webapp/viewbasic/login.html
+++ b/serverweb/src/main/webapp/viewbasic/login.html
@@ -5,7 +5,7 @@
 		<title>Insert title here</title>
 	</head>
 	<body>
-		<form method="post" action="/serverweb/requesttest.do">
+		<form method="post" action="/serverweb/paramtest.do">
 			ID:<input type="text" name="id"/><br/>
 			PW:<input type="password" name="pass"/><br/>
 			<input type="submit" value="login"/>
