--- a/serverweb/src/main/webapp/viewbasic/start.html
+++ b/serverweb/src/main/webapp/viewbasic/start.html
@@ -8,8 +8,8 @@
 		<h1>요청재지정연습</h1>
 		<hr>
 		<h2><a href="/serverweb/SendRedirectTestServlet">response의 sendRedirect</a></h2>
-		<h2>RequestDispatcher Object가 제공하는 forward</h2>
-		<h2>RequestDispatcher Object가 제공하는 include</h2>
+		<h2><a href="/serverweb/forward">RequestDispatcher Object가 제공하는 forward</a></h2>
+		<h2><a href="/serverweb/include">RequestDispatcher Object가 제공하는 include</a></h2>
 		
 	</body>
 </html>
